2005-05-06  John W. Eaton  <jwe@octave.org>

	* lapack/dpotri.f, lapack/dlauum.f, lapack/dlauu2.f,
	lapack/zpotri.f, lapack/zlauum.f, lapack/zlauu2.f: New files.

2005-04-08  John W. Eaton  <jwe@octave.org>

	* Makefile.in, Makerules.in (clean, distclean, maintainer-clean):
	Avoid duplication in rules.

2005-03-17  Andy Adler  <adler@site.uottawa.ca>

	* Makerules.in (install-strip): Include double-colon target here too.

2005-03-09  John W. Eaton  <jwe@octave.org>

	* Makefile.in (bin-dist): Delete target.
	(BINDISTLIBS, BINDISTFILES): Delete variables.

2005-03-01  John W. Eaton  <jwe@octave.org>

	* Makefile.in (CRUFT_DIRS): Remove it from the list.
	* odessa: Delete directory.

	* misc/machar.c (rmachar): Declare local REAL variables volatile.

2005-02-25  John W. Eaton  <jwe@octave.org>

	* blas/zher.f: New file.

	Sparse merge.

	2005-01-13 David Bateman  <dbateman@free.fr>

	* lapack/dgttrf.f lapack/dgttrs.f lapacl/zgttrf.f lapack/zgttrs.f:
	new files

	2005-01-23  David Bateman  <dbateman@free.fr>

	* lapack/dgtsv.f lapack/dpbcon.f lapack/dpbtf2.f lapack/dpbtrf.f 
	lapack/dpbtrs.f lapack/dptsv.f lapack/dpttrf.f lapack/dpttrs.f 
	lapack/dptts2.f lapack/zgtsv.f lapack/zpbcon.f lapack/zpbtf2.f 
	lapack/zpbtrf.f lapack/zpbtrs.f lapack/zptsv.f lapack/zpttrf.f 
	lapack/zpttrs.f lapck/zptts2.f: New files.

	2004-12-29  John W. Eaton  <jwe@octave.org>

	* blas/zbtsv.f: New file.
	* lapack/dgbcon.f, lapack/dgbtrf.f, lapack/dgbtrs.f,
	lapack/dlatbs.f, lapack/zgbcon.f, lapack/zgbtf2.f,
	lapack/zgbtrf.f, lapack/zgbtrs.f, lapack/zlatbs.f: New files.

2005-02-10  John W. Eaton  <jwe@octave.org>

	* misc/cquit.c (octave_signal_caught): New global variable.
	* misc/quit.cc (occtave_handle_signal): New function.
	(octave_signal_hook): New global pointer.
	* misc/quit.h: Provide decls.
	(OCTAVE_QUIT): Check octave_signal_caught, not
	octave_interrupt_state, and call octave_handle_signal, not
	octave_throw_interrupt_exception.
	
2005-02-08  John W. Eaton  <jwe@octave.org>
