@@ -32,7 +32,7 @@
 ## If @var{x} and @var{y} are matrices, the cross product is applied 
 ## along the first dimension with 3 elements. The optional argument 
 ## @var{dim} is used to force the cross product to be calculated along
-## the dimension defiend by @var{dim}.
+## the dimension defined by @var{dim}.
 ## @end deftypefn
 
 ## Author: Kurt Hornik <Kurt.Hornik@wu-wien.ac.at>
