@@ -21,7 +21,7 @@
 ## @deftypefn {Function File} {} discrete_cdf (@var{x}, @var{v}, @var{p})
 ## For each element of @var{x}, compute the cumulative distribution
 ## function (CDF) at @var{x} of a univariate discrete distribution which
-## assumes the values in v with probabilities @var{p}.
+## assumes the values in @var{v} with probabilities @var{p}.
 ## @end deftypefn
 
 ## Author: KH <Kurt.Hornik@wu-wien.ac.at>
