@@ -1,3 +1,8 @@
+2005-09-14  Daniel  <durbano@shbano.com>
+
+	* lapack/zbdsqr.f: Fix typo in docs.
+	From Jorge Barros de Abreu <ficmatin01@solar.com.br>.
+
 2005-05-06  John W. Eaton  <jwe@octave.org>
 
 	* lapack/dpotri.f, lapack/dlauum.f, lapack/dlauu2.f,
